# dodo-parser

./: .env.example  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  consumer.py  docker-compose-local.yaml  docker-compose-prod.yaml  main.py  pyproject.toml
dodo/: scrapy.cfg
dodo/database/: __init__.py  models.py  uow.py
dodo/database/migrations/: env.py
dodo/database/migrations/versions/: 2eeb009f3ae7_table_dodoproduct.py
dodo/dodo/: config.py  items.py  logger.py  middlewares.py  pipelines.py  settings.py
dodo/dodo/rabbitmq/: rabbit_broker.py  schemas.py
dodo/dodo/spiders/: Dodo.py  dodo.py
