[project]
name = "dodo-parser"
version = "0.1.0"
description = "app for parse product cards"
authors = [
    {name = "Maksim Tarkin",email = "williamcano97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
